--- a/uvod.css
+++ b/uvod.css
@@ -1,7 +1,3 @@
-h1 {
-    color:orangered;
-    font-weight: bold;
-}
 
 .menu {
     
@@ -10,21 +6,39 @@ h1 {
 .pohoda {
     background-image: url(podklady/palmy.jpg);
     background-repeat: no-repeat;   
-    background-size: cover;
+    size: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .klid {
     background-image: url(podklady/jezero.jpg);
     background-repeat: no-repeat;
+    size: auto;
+    width: 100%;
 
 }
 
 .vylet {
     background-image: url(podklady/nakole.jpg);
     background-repeat: no-repeat;
+    size: auto;
+    width: 100%;
 }
 
 .info {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 10px;
+
+}
+
+.znacky {
+    position: center;
+}
+
+.box-uvod {
+    background-color:lightgray;
     
+    padding: 10px;
 }
