--- a/uvod.css
+++ b/uvod.css
@@ -6,15 +6,15 @@
 .pohoda {
     background-image: url(podklady/palmy.jpg);
     background-repeat: no-repeat;   
-    size: cover;
+    background-size: contain;
     width: 100%;
-    height: 100%;
+    
 }
 
 .klid {
     background-image: url(podklady/jezero.jpg);
     background-repeat: no-repeat;
-    size: auto;
+    background-size: contain;
     width: 100%;
 
 }
@@ -22,7 +22,7 @@
 .vylet {
     background-image: url(podklady/nakole.jpg);
     background-repeat: no-repeat;
-    size: auto;
+    background-size: contain;
     width: 100%;
 }
 
