--- a/uvod.css
+++ b/uvod.css
@@ -1,6 +1,21 @@
 
 .menu {
-    
+    display: flex;
+    justify-content: end;
+}
+
+button {
+    background-color: transparent;
+    color: orangered;
+    font-size: 18px;
+    padding: 10px;
+    border-color: transparent;
+}
+
+.menu button:hover,
+.menu button:focus {
+    background-color: orangered;
+    color: white;
 }
 
 .pohoda {
