--- a/uvod.css
+++ b/uvod.css
@@ -1,7 +1,7 @@
 
 .menu {
-    display: flex;
-    justify-content: end;
+    display: grid;
+    grid-template-columns: 4fr 1fr 1fr 1fr;
 }
 
 button {
