--- a/lastMinuteZajezdy.css
+++ b/lastMinuteZajezdy.css
@@ -1,15 +1,34 @@
 .kanon {
     background-image: url(podklady/podkova.jpg);
     background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
 }
 
 .ostrov {
     background-image: url(podklady/zatoka.jpg);
     background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
 }
 
 .jezero {
     background-image: url(podklady/lodicka.jpg);
     background-repeat: no-repeat;
+    background-size: cover;    
+    width: 100%;
 
+}
+
+.zajezdy {
+    display: flex;
+
+
+}
+
+.cena {
+    background-color: orangered;
+    color: white;
+    margin: 15px;
+    padding: 10px;
 }
