--- a/lastMinuteZajezdy.css
+++ b/lastMinuteZajezdy.css
@@ -2,26 +2,43 @@
     background-image: url(podklady/podkova.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
+    background-position: center center;  
+    width: auto;
+   
+    padding: 10px;
+    
 }
 
 .ostrov {
     background-image: url(podklady/zatoka.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
+    background-position: center center;  
+    width: auto;
+    
+    
+    padding: 10px;
 }
 
 .jezero {
     background-image: url(podklady/lodicka.jpg);
     background-repeat: no-repeat;
-    background-size: cover;    
-    width: 100%;
+    background-size: cover;
+    background-position: center center; 
+    width: auto;
+    height: 100%;
+    padding: 10px;
+    margin: 0 0 0 10px;
+    
 
 }
 
 .zajezdy {
     display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    
 
 
 }
@@ -31,4 +48,14 @@
     color: white;
     margin: 15px;
     padding: 10px;
+}
+
+.zajezd-velky {
+    
+ 
+}
+
+.zajezdy-male {
+    
+    gap: 10px;
 }
