--- a/uvod.css
+++ b/uvod.css
@@ -20,15 +20,21 @@ header button:focus {
 
 .tipy {
     display: grid;
-    
- }
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+    margin: 20px 0 20px 0;
+    min-height: 300px;
+}
 
 .pohoda {
     background-image: url(podklady/palmy.jpg);
     background-repeat: no-repeat;   
     background-size: cover;
     width: 100%;
-    
+    height: auto;
+    grid-row: 1 / span 2;
+    grid-column: 1;
 }
 
 .klid {
@@ -36,6 +42,9 @@ header button:focus {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
+    height: auto;
+    grid-row: 1;
+    grid-column: 2;
 
 }
 
@@ -44,6 +53,9 @@ header button:focus {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
+    height: auto;
+    grid-row: 2;
+    grid-column: 2;
 }
 
 .info {
@@ -78,14 +90,21 @@ header button:focus {
     color: white;
     font-weight: 800;
     font-size: 18px;
+    margin: 15px;
 }
 
 .nazev-velky {
     color: white;
     font-weight: 800;
     font-size: 25px;
+    margin: 15px;
 }
 
 .popis {
     color: white;
+    margin: 15px;
+}
+
+.cena {
+    margin: 15px;
 }
