--- a/lastMinuteZajezdy.css
+++ b/lastMinuteZajezdy.css
@@ -6,7 +6,6 @@
     width: auto;
     grid-column: 1;
     grid-row: 1;
-    
 }
 
 .ostrov {
@@ -17,7 +16,6 @@
     width: auto;
     grid-column: 1;
     grid-row: 2;
-    
 }
 
 .jezero {
@@ -29,8 +27,6 @@
     height: auto;
     grid-column: 2;
     grid-row: 1 / span 2;
-    
-
 }
 
 .zajezdy {
@@ -40,16 +36,13 @@
     gap: 10px;
     min-height: 400px;
     margin: 20px 0 20px 0;
-    
-
-
 }
 
 .cena {
     background-color: orangered;
     color: white;
-    margin: 15px;
-    padding: 10px;
+    margin: 15px 0 0 15px;
+    padding: 10px 10px 10px 10px;
+    width: 80px;
 }
 
-}
