--- a/obecny.css
+++ b/obecny.css
@@ -2,11 +2,14 @@
 @import "lastMinuteZajezdy.css";
 @import "novinky.css";
 
-
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 25px 35px;
-    
+}
+
+h2 {
+    margin: 40px 0 20px 0;
+    font-weight: 900;
 }
 
 h4 {
