--- a/uvod.css
+++ b/uvod.css
@@ -1,4 +1,3 @@
-
 header {
     display: grid;
     grid-template-columns: 4fr 1fr 1fr 1fr;
@@ -27,7 +26,7 @@ header button:focus {
     min-height: 400px;
 }
 
-.pohoda {
+.tipy__pohoda {
     background-image: url(podklady/palmy.jpg);
     background-repeat: no-repeat;   
     background-size: cover;
@@ -37,7 +36,7 @@ header button:focus {
     grid-column: 1;
 }
 
-.klid {
+.tipy__klid {
     background-image: url(podklady/jezero.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -45,10 +44,9 @@ header button:focus {
     height: auto;
     grid-row: 1;
     grid-column: 2;
-
 }
 
-.vylet {
+.tipy__vylet {
     background-image: url(podklady/nakole.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -62,18 +60,12 @@ header button:focus {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 10px;
-
 }
 
-.box-uvod {
+.info__box-uvod {
     background-color:lightgray;
-    
     padding: 10px;
-    
 }
-
-
-
 
 .znacka-1, .znacka-2, .znacka-3, .znacka-4 {
     position: auto;
@@ -81,9 +73,6 @@ header button:focus {
     display: flex;
     justify-content: center;
 }
-
-
-
 
 .uprostred, .stred {
     text-align: center;
@@ -99,14 +88,12 @@ header button:focus {
 .nazev-velky {
     color: white;
     font-weight: 800;
-    font-size: 25px;
-    
+    font-size: 25px; 
 }
 
 .popis {
     color: white;
     margin: 15px 0 0 0;
-    
 }
 
 .popis-velky {
